--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <body>
 
-<h3>Welcome, my friend.</h3>
+<h6>Welcome, my friend.</h6>
+<p>
+    This website should be used to rank some of your favorite things, 
+    as well as add some to a safe place so you can indulge in them
+    at a later time. Enjoy, you deserve it.
+</p>
 
 </body>
 
