--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <body>
 
-<h6>Welcome, my friend.</h6>
-<p>
+<h1 id = "mainHeader">Welcome, my friend.</h1>
+<p id = "introParagraph">
     This website should be used to rank some of your favorite things, 
     as well as add some to a safe place so you can indulge in them
-    at a later time. Enjoy, you deserve it.
+    at a later time. 
+    <hr>
+    Enjoy, you deserve it.
 </p>
 
 </body>
